--- a/sections/sidebar-navigation.liquid
+++ b/sections/sidebar-navigation.liquid
@@ -25,8 +25,98 @@
       {%- if link_handle == 'search' or link.title contains 'Search' -%}
         <li>
           <a href="{{ routes.search_url }}" class="iobio-menu-link" data-iobio-link>
-            <span style="display:flex; align-items:center; gap:10px;">
+            <span style="display:flex; align-items:center; gap:12px;">
               <svg aria-hidden="true" focusable="false" role="presentation" class="icon icon-search" viewBox="0 0 20 20" style="width:1.2rem; height:1.2rem; fill:currentColor;"><path d="M8 3c-2.8 0-5 2.2-5 5s2.2 5 5 5 5-2.2 5-5-2.2-5-5-5zm0-2c3.9 0 7 3.1 7 7 0 1.6-.5 3-1.4 4.2l5.1 5.1c.4.4.4 1 0 1.4-.4.4-1 .4-1.4 0l-5.1-5.1C11 15.5 9.6 16 8 16c-3.9 0-7-3.1-7-7s3.1-7 7-7z" fill="currentColor"/></svg>
+              {{ link.title }}
+            </span>
+          </a>
+        </li>
+
+      {%- elsif link_handle == 'catalogo' or link.title contains 'Catalog' -%}
+        <!-- CATALOGO: Dropdown with Collections -->
+        <li>
+          <button type="button" class="iobio-menu-link iobio-menu-toggle" aria-expanded="false">
+            <span style="display:flex; align-items:center; gap:12px;">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M1 2.5A1.5 1.5 0 0 1 2.5 1h3A1.5 1.5 0 0 1 7 2.5v3A1.5 1.5 0 0 1 5.5 7h-3A1.5 1.5 0 0 1 1 5.5v-3zm8 0A1.5 1.5 0 0 1 10.5 1h3A1.5 1.5 0 0 1 15 2.5v3A1.5 1.5 0 0 1 13.5 7h-3A1.5 1.5 0 0 1 9 5.5v-3zm-8 8A1.5 1.5 0 0 1 2.5 9h3A1.5 1.5 0 0 1 7 10.5v3A1.5 1.5 0 0 1 5.5 15h-3A1.5 1.5 0 0 1 1 13.5v-3zm8 0A1.5 1.5 0 0 1 10.5 9h3a1.5 1.5 0 0 1 1.5 1.5v3a1.5 1.5 0 0 1-1.5 1.5h-3A1.5 1.5 0 0 1 9 13.5v-3z"/></svg>
+              {{ link.title }}
+            </span>
+            <span class="iobio-arrow">▼</span>
+          </button>
+          <ul class="iobio-submenu">
+            {%- for collection in collections -%}
+              {%- unless collection.handle == 'frontpage' -%}
+                {%- assign icon_svg = '' -%}
+                {%- assign handle_check = collection.handle | downcase -%}
+                
+                {%- if handle_check contains 'alimentazione' -%}
+                  <!-- Alimentazione: Leaf (Clean) -->
+                  {%- capture icon_svg -%}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M5 8c0-4.418 3.582-8 8-8 0 4.418-3.582 8-8 8zM5 8c0 4.418 3.582 8 8 8 0-4.418-3.582-8-8-8z"/><path d="M5 8c-3.037 0-5.5-2.463-5.5-5.5 0 3.037 2.463 5.5 5.5 5.5z"/></svg>{%- endcapture -%}
+                
+                {%- elsif handle_check contains 'altro' -%}
+                  <!-- Altro: Three Dots -->
+                  {%- capture icon_svg -%}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/></svg>{%- endcapture -%}
+
+                {%- elsif handle_check contains 'animali' -%}
+                  <!-- Animali: Paw -->
+                  {%- capture icon_svg -%}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M7.175 2.451c-.869-1.39-2.903-1.077-3.367.518-.465 1.597.55 2.872 1.936 2.872 1.385 0 2.3-1.793 1.431-3.39zM3.483 5.378c-.868-1.39-2.903-1.076-3.367.519-.465 1.596.55 2.871 1.936 2.871 1.385 0 2.3-1.794 1.431-3.39zM12.518 5.378c.868-1.39 2.903-1.076 3.367.519.465 1.596-.55 2.871-1.936 2.871-1.386 0-2.3-1.794-1.431-3.39zM8.825 2.451c.869-1.39 2.903-1.077 3.367.518.465 1.597-.55 2.872-1.936 2.872-1.386 0-2.3-1.793-1.431-3.39zM11.97 8.128c-1.32-.47-2.673.57-3.23 1.527-.246.425-.561.905-.74.905-.18 0-.495-.48-.74-.905-.558-.957-1.91-1.996-3.23-1.527-1.284.456-1.503 2.1-.594 3.013 1.053 1.057 2.38 2.368 3.868 2.836h1.393c1.488-.468 2.815-1.78 3.868-2.836.909-.913.69-2.557-.594-3.013z"/></svg>{%- endcapture -%}
+                
+                {%- elsif handle_check contains 'casa' -%}
+                  <!-- Casa: House -->
+                  {%- capture icon_svg -%}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"/></svg>{%- endcapture -%}
+                
+                {%- elsif handle_check contains 'dermocosmesi' -%}
+                  <!-- Dermocosmesi: Lotus/Spa -->
+                  {%- capture icon_svg -%}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M8 1.5c-2 0-3.5 1.5-3.5 3.5 0 1 1 2.5 3.5 4 2.5-1.5 3.5-3 3.5-4 0-2-1.5-3.5-3.5-3.5z"/><path d="M3.6 6c-1.5 0-2.6 1.2-2.6 2.5 0 2 2.5 3.5 5 3.5 1 0 1.9-.3 2.5-.7-.6-.4-1.5-.7-2.5-.7-2.5 0-5-1.5-5-3.5 0-.5.3-1.1.8-1.5.6-.5 1.3-.6 1.8-.6zm8.8 0c.5 0 1.2.1 1.8.6.5.4.8 1 .8 1.5 0 2-2.5 3.5-5 3.5-1 0-1.9-.3-2.5-.7.6-.4 1.5-.7 2.5-.7 2.5 0 5-1.5 5-3.5 0-1.3-1.1-2.5-2.6-2.5z"/></svg>{%- endcapture -%}
+                
+                {%- elsif handle_check contains 'igiene' -%}
+                  <!-- Igiene: Drop -->
+                  {%- capture icon_svg -%}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M8 16a6 6 0 0 0 6-6c0-1.655-1.122-2.904-2.432-4.362C10.254 4.176 8.75 2.503 8 0c0 0-6 5.686-6 10a6 6 0 0 0 6 6zM6.646 6.354l3 3 .708-.708-3-3-.708.708z"/></svg>{%- endcapture -%}
+                
+                {%- elsif handle_check contains 'medicina' or handle_check contains 'cura' -%}
+                  <!-- Medicina: Heart -->
+                  {%- capture icon_svg -%}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/></svg>{%- endcapture -%}
+                
+                {%- elsif handle_check contains 'novit' or handle_check contains 'offerte' -%}
+                  <!-- Novità: Star -->
+                  {%- capture icon_svg -%}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/></svg>{%- endcapture -%}
+                
+                {%- elsif handle_check contains 'sport' -%}
+                  <!-- Sport: Lightning -->
+                  {%- capture icon_svg -%}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M11.251.068a.5.5 0 0 1 .227.58L9.677 6.5H13a.5.5 0 0 1 .364.843l-8 8.5a.5.5 0 0 1-.842-.49L6.323 9.5H3a.5.5 0 0 1-.364-.843l8-8.5a.5.5 0 0 1 .615-.09z"/></svg>{%- endcapture -%}
+                
+                {%- else -%}
+                  <!-- Default: Circle Dot -->
+                  {%- capture icon_svg -%}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M8 9.5a1.5 1.5 0 1 0 0-3 1.5 1.5 0 0 0 0 3z"/></svg>{%- endcapture -%}
+                {%- endif -%}
+
+                <li>
+                  <a href="{{ collection.url }}" class="iobio-menu-link iobio-submenu-link" data-iobio-link>
+                    <span style="display:flex; align-items:center; gap:12px;">
+                      {{ icon_svg }}
+                      {{ collection.title }}
+                    </span>
+                  </a>
+                </li>
+              {%- endunless -%}
+            {%- endfor -%}
+          </ul>
+        </li>
+
+      {%- elsif link_handle == 'infoblog' -%}
+        <li>
+          <a href="{{ link.url }}" class="iobio-menu-link {% if link.active %}active{% endif %}" data-iobio-link>
+            <span style="display:flex; align-items:center; gap:12px;">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/><path d="M11.354 4.646a.5.5 0 0 0-.708 0l-6 6a.5.5 0 0 0 .708.708l6-6a.5.5 0 0 0 0-.708z"/></svg>
+              {{ link.title }}
+            </span>
+          </a>
+        </li>
+
+      {%- elsif link_handle == 'videofaq' -%}
+        <li>
+          <a href="{{ link.url }}" class="iobio-menu-link {% if link.active %}active{% endif %}" data-iobio-link>
+            <span style="display:flex; align-items:center; gap:12px;">
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/><path d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445z"/></svg>
               {{ link.title }}
             </span>
           </a>
@@ -37,7 +127,7 @@
         {%- if customer -%}
           <li>
             <a href="{{ link.url }}" class="iobio-menu-link {% if link.active %}active{% endif %}" data-iobio-link>
-              <span style="display:flex; align-items:center; gap:10px;">
+              <span style="display:flex; align-items:center; gap:12px;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M4 4h8v-1c0-1.657-1.343-3-3-3s-3 1.343-3 3v1z" style="display:none"/><path d="M1 4h14v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4zm7-3C6.896 1 6 1.896 6 3v1h4V3c0-1.104-.896-2-2-2z"/></svg>
                 {{ link.title }}
               </span>
@@ -50,7 +140,7 @@
         {%- if customer -%}
           <li>
             <a href="{{ routes.account_url }}" class="iobio-menu-link {% if link.active %}active{% endif %}" data-iobio-link>
-              <span style="display:flex; align-items:center; gap:10px;">
+              <span style="display:flex; align-items:center; gap:12px;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/><path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/></svg>
                 {{ link.title }}
               </span>
@@ -58,13 +148,16 @@
           </li>
           <li>
             <a href="{{ routes.account_logout_url }}" class="iobio-menu-link" data-iobio-link>
-              <span style="opacity:0.7; font-size:0.9em;">Esci</span>
+              <span style="display:flex; align-items:center; gap:12px; opacity:0.7;">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" style="visibility:hidden"><path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/></svg>
+                Esci
+              </span>
             </a>
           </li>
         {%- else -%}
           <li>
             <a href="{{ routes.account_login_url }}" class="iobio-menu-link" data-iobio-link>
-              <span style="display:flex; align-items:center; gap:10px;">
+              <span style="display:flex; align-items:center; gap:12px;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/><path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/></svg>
                 Accedi / Registrati
               </span>
@@ -367,75 +460,93 @@
 
 <script>
 document.addEventListener('DOMContentLoaded', () => {
-  const sidebar = document.getElementById('iobio-sidebar-main');
-  const backdrop = document.getElementById('iobio-sidebar-backdrop');
-  // Attempt to find the existing theme burger button 
-  const burgerTriggers = document.querySelectorAll('summary.header__icon--menu, .header__icon--menu button, [aria-controls="menu-drawer"]');
-  const sidebarLinks = document.querySelectorAll('#iobio-sidebar-main [data-iobio-link]');
-
+  // Helper to safely get elements
+  const getSidebar = () => document.getElementById('iobio-sidebar-main');
+  const getBackdrop = () => document.getElementById('iobio-sidebar-backdrop');
+  
   function openSidebar(e) {
+    const sidebar = getSidebar();
+    const backdrop = getBackdrop();
+    
     if (e) {
       e.preventDefault();
-      e.stopPropagation(); // Stop bubbling
+      e.stopPropagation();
     }
-    sidebar.classList.add('is-active');
-    backdrop.classList.add('is-active');
-    document.body.style.overflow = 'hidden'; // Lock scroll
+    
+    if (sidebar) sidebar.classList.add('is-active');
+    if (backdrop) backdrop.classList.add('is-active');
+    document.body.style.overflow = 'hidden';
   }
 
   function closeSidebar() {
-    sidebar.classList.remove('is-active');
-    backdrop.classList.remove('is-active');
-    document.body.style.overflow = ''; // Unlock scroll
+    const sidebar = getSidebar();
+    const backdrop = getBackdrop();
+    
+    if (sidebar) sidebar.classList.remove('is-active');
+    if (backdrop) backdrop.classList.remove('is-active');
+    document.body.style.overflow = '';
   }
 
-  // Hook up triggers
-  burgerTriggers.forEach(trigger => {
-    // Clone node to strip existing listeners if necessary, but that might break other things.
-    // Instead, just force our logic and capture.
-    trigger.addEventListener('click', (e) => {
+  // 1. Open Triggers (Burger Menu)
+  // We use delegation here too just in case triggers are replaced
+  document.addEventListener('click', (e) => {
+    const trigger = e.target.closest('summary.header__icon--menu, .header__icon--menu button, [aria-controls="menu-drawer"]');
+    if (trigger) {
+      console.log('[Sidebar] Burger trigger clicked');
       e.preventDefault();
-      e.stopImmediatePropagation(); // Try to kill the default theme listener
+      e.stopImmediatePropagation();
       openSidebar(e);
-    }, true); // Capture phase to run before standard listeners
-  });
+    }
+  }, true); // Capture phase to beat theme scripts
 
-  // Close on Backdrop Click
-  backdrop.addEventListener('click', closeSidebar);
+  // 2. Global Event Delegation (Backdrop & Sidebar Internal)
+  document.addEventListener('click', (e) => {
+    const sidebar = getSidebar();
+    const backdrop = getBackdrop();
+    
+    // Safety check - if sidebar doesn't exist, do nothing
+    if (!sidebar) return;
 
-  // Link & Toggle Logic
-  const allInteractiveElements = document.querySelectorAll('#iobio-sidebar-main .iobio-menu-link');
+    // A. Handle Backdrop Click (Close)
+    if (e.target === backdrop) {
+      console.log('[Sidebar] Backdrop clicked');
+      closeSidebar();
+      return;
+    }
 
-  allInteractiveElements.forEach(el => {
-    el.addEventListener('click', function(e) {
-      // Toggle Logic
-      if (this.classList.contains('iobio-menu-toggle')) {
-        e.preventDefault();
-        const expanded = this.getAttribute('aria-expanded') === 'true';
-        this.setAttribute('aria-expanded', !expanded);
-        
-        // Find next sibling submenu
-        const submenu = this.nextElementSibling;
-        if (submenu && submenu.classList.contains('iobio-submenu')) {
-          submenu.classList.toggle('is-open');
-        }
-        return;
-      }
+    // Only proceed if click is inside sidebar
+    const sidebarClick = e.target.closest('#iobio-sidebar-main');
+    if (!sidebarClick) return;
 
-      // Link Navigation Logic
-      const url = this.getAttribute('href');
-      
-      if (this.target === '_blank' || e.metaKey || e.ctrlKey || !url) return;
-      
+    // B. Handle Toggles (Submenus)
+    const toggle = e.target.closest('.iobio-menu-toggle');
+    if (toggle) {
+      console.log('[Sidebar] Toggle triggered:', toggle);
       e.preventDefault();
+      const submenu = toggle.nextElementSibling;
       
-      this.classList.add('loading-active');
+      if (submenu && submenu.classList.contains('iobio-submenu')) {
+        const isOpen = submenu.classList.toggle('is-open');
+        toggle.setAttribute('aria-expanded', isOpen);
+      }
+      return; 
+    }
+
+    // C. Handle Links (Navigation)
+    const link = e.target.closest('a[data-iobio-link]');
+    if (link) {
+      console.log('[Sidebar] Link triggered:', link);
+      const url = link.getAttribute('href');
+      if (link.target === '_blank' || e.metaKey || e.ctrlKey || !url || url.startsWith('#')) return;
+
+      e.preventDefault();
+      link.classList.add('loading-active');
       
       setTimeout(() => {
         closeSidebar();
         window.location.href = url;
       }, 200);
-    });
+    }
   });
 });
 </script>
