--- a/sections/sidebar-navigation.liquid
+++ b/sections/sidebar-navigation.liquid
@@ -49,13 +49,9 @@
                 {%- assign handle_check = collection.handle | downcase -%}
                 
                 {%- if handle_check contains 'alimentazione' -%}
-                  <!-- Alimentazione: Leaf (Clean) -->
-                  {%- capture icon_svg -%}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M5 8c0-4.418 3.582-8 8-8 0 4.418-3.582 8-8 8zM5 8c0 4.418 3.582 8 8 8 0-4.418-3.582-8-8-8z"/><path d="M5 8c-3.037 0-5.5-2.463-5.5-5.5 0 3.037 2.463 5.5 5.5 5.5z"/></svg>{%- endcapture -%}
+                  <!-- Alimentazione: Apple/Food -->
+                  {%- capture icon_svg -%}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M8.186 1.113a.5.5 0 0 0-.372 0c-1.78.602-3.814 1.5-3.814 3.327 0 1.95 2.15 3.56 3.655 4.516.14.088.306.088.446 0 1.505-.957 3.655-2.566 3.655-4.516 0-1.828-2.034-2.726-3.814-3.327-.58.196-1.166.452-1.756.766z"/><path d="M8 7.5c-1 0-1.5-.5-1.5-1.5s.5-1.5 1.5-1.5 1.5.5 1.5 1.5-.5 1.5-1.5 1.5z" style="opacity:0.6"/><path d="M7 11V8h2v3h1.5a.5.5 0 0 1 0 1H10v3H6v-3H5.5a.5.5 0 0 1 0-1H7z"/></svg>{%- endcapture -%}
                 
-                {%- elsif handle_check contains 'altro' -%}
-                  <!-- Altro: Three Dots -->
-                  {%- capture icon_svg -%}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M3 9.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3zm5 0a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3z"/></svg>{%- endcapture -%}
-
                 {%- elsif handle_check contains 'animali' -%}
                   <!-- Animali: Paw -->
                   {%- capture icon_svg -%}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M7.175 2.451c-.869-1.39-2.903-1.077-3.367.518-.465 1.597.55 2.872 1.936 2.872 1.385 0 2.3-1.793 1.431-3.39zM3.483 5.378c-.868-1.39-2.903-1.076-3.367.519-.465 1.596.55 2.871 1.936 2.871 1.385 0 2.3-1.794 1.431-3.39zM12.518 5.378c.868-1.39 2.903-1.076 3.367.519.465 1.596-.55 2.871-1.936 2.871-1.386 0-2.3-1.794-1.431-3.39zM8.825 2.451c.869-1.39 2.903-1.077 3.367.518.465 1.597-.55 2.872-1.936 2.872-1.386 0-2.3-1.793-1.431-3.39zM11.97 8.128c-1.32-.47-2.673.57-3.23 1.527-.246.425-.561.905-.74.905-.18 0-.495-.48-.74-.905-.558-.957-1.91-1.996-3.23-1.527-1.284.456-1.503 2.1-.594 3.013 1.053 1.057 2.38 2.368 3.868 2.836h1.393c1.488-.468 2.815-1.78 3.868-2.836.909-.913.69-2.557-.594-3.013z"/></svg>{%- endcapture -%}
@@ -65,8 +61,8 @@
                   {%- capture icon_svg -%}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.708L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.647a.5.5 0 0 0 .708-.708L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"/></svg>{%- endcapture -%}
                 
                 {%- elsif handle_check contains 'dermocosmesi' -%}
-                  <!-- Dermocosmesi: Lotus/Spa -->
-                  {%- capture icon_svg -%}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M8 1.5c-2 0-3.5 1.5-3.5 3.5 0 1 1 2.5 3.5 4 2.5-1.5 3.5-3 3.5-4 0-2-1.5-3.5-3.5-3.5z"/><path d="M3.6 6c-1.5 0-2.6 1.2-2.6 2.5 0 2 2.5 3.5 5 3.5 1 0 1.9-.3 2.5-.7-.6-.4-1.5-.7-2.5-.7-2.5 0-5-1.5-5-3.5 0-.5.3-1.1.8-1.5.6-.5 1.3-.6 1.8-.6zm8.8 0c.5 0 1.2.1 1.8.6.5.4.8 1 .8 1.5 0 2-2.5 3.5-5 3.5-1 0-1.9-.3-2.5-.7.6-.4 1.5-.7 2.5-.7 2.5 0 5-1.5 5-3.5 0-1.3-1.1-2.5-2.6-2.5z"/></svg>{%- endcapture -%}
+                  <!-- Dermocosmesi: Flower -->
+                  {%- capture icon_svg -%}<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16"><path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/><path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/><circle cx="8" cy="8" r="1.5" style="opacity:0.8"/></svg>{%- endcapture -%}
                 
                 {%- elsif handle_check contains 'igiene' -%}
                   <!-- Igiene: Drop -->
